--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.rmygym.presentation.ui.splash.SplashViewActivity">
+        <activity
+            android:name="com.rmygym.presentation.ui.main.MainViewActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.MAIN" />
@@ -24,10 +27,5 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.rmygym.presentation.ui.main.MainViewActivity"
-            android:exported="true"
-            android:windowSoftInputMode="adjustResize" />
     </application>
-
 </manifest>
