--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,15 @@ android {
         }
     }
 
+    buildFeatures {
+        compose = true
+    }
+
+    composeOptions {
+        kotlinCompilerVersion "1.5.10"
+        kotlinCompilerExtensionVersion "1.0.0-beta08"
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -66,5 +75,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation presentationDependencies.coreKotlin
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation presentationDependencies.constraintLayout
+
+    implementation presentationDependencies.composeActivity
+    implementation presentationDependencies.composeMaterial
+    implementation presentationDependencies.composeAnimation
+    implementation presentationDependencies.composeTool
+    implementation presentationDependencies.composeViewModel
+    implementation presentationDependencies.composeLivedata
 }
